--- a/order-details.html
+++ b/order-details.html
@@ -9,13 +9,37 @@
       font-family: Arial, sans-serif;
       margin: 20px;
     }
-    /* Headline nama customer */
+    /* Logo container dengan shape biru di balik logo */
+    #logo-container {
+      position: relative;
+      width: 100%;
+      height: 100px; /* Sesuaikan tinggi sesuai kebutuhan */
+      margin-bottom: 20px;
+    }
+    .blue-shape {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%; /* Membentang dari kiri sampai tengah halaman */
+      height: 100%;
+      background-color: #007BFF; /* Warna biru */
+      /* Bentuk setengah trapesium terbalik */
+      clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
+      z-index: 0;
+    }
+    #brinks-logo {
+      position: relative;
+      z-index: 1;
+      height: 80px; /* Sesuaikan tinggi logo */
+      margin: 10px 0 0 20px; /* Penyesuaian margin agar logo tidak terlalu mepet */
+    }
+    /* Headline customer */
     #customer-headline {
       font-size: 24px;
       font-weight: bold;
       margin-bottom: 20px;
     }
-    /* Tabel utama (Orders) */
+    /* Tabel utama (Order Details) */
     table {
       width: 100%;
       border-collapse: collapse;
@@ -24,7 +48,7 @@
     th, td {
       border: 1px solid #000;
       padding: 10px;
-      text-align: left; /* default */
+      text-align: left;
     }
     th {
       background-color: #f4f4f4;
@@ -51,7 +75,6 @@
       height: 16px;
       margin-right: 5px;
     }
-    /* Sembunyikan tombol print saat mencetak */
     @media print {
       #print-pdf-btn {
         display: none;
@@ -63,7 +86,7 @@
         display: table-footer-group;
       }
     }
-    /* Tabel Quotation (2 baris) */
+    /* Tabel Quotation (Grand Total) dengan dua baris */
     #quotation-table {
       margin-top: 20px;
       border: 1px solid #000;
@@ -73,7 +96,7 @@
     #quotation-table td {
       border: 1px solid #000;
       padding: 10px;
-      text-align: right; /* label dan nilai sama-sama rata kanan */
+      text-align: right; /* Rata kanan */
     }
     #quotation-table #grand-total-label {
       background-color: #f4f4f4;
@@ -84,6 +107,13 @@
   </style>
 </head>
 <body>
+
+  <!-- Logo container: shape biru dan logo Brinks -->
+  <div id="logo-container">
+    <div class="blue-shape"></div>
+    <!-- Ganti src dengan URL logo Brinks yang diupload di Glide -->
+    <img id="brinks-logo" src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
+  </div>
 
   <!-- Headline nama customer -->
   <div id="customer-headline">Customer Name : N/A</div>
@@ -112,7 +142,7 @@
     </tbody>
   </table>
 
-  <!-- Tabel Quotation (2 Baris) -->
+  <!-- Tabel Quotation (Grand Total) dengan 2 baris -->
   <table id="quotation-table">
     <tr>
       <td id="grand-total-label">Grand Total</td>
@@ -126,7 +156,7 @@
     // Ambil parameter dari URL
     const params = new URLSearchParams(window.location.search);
 
-    // Fungsi decode parameter
+    // Fungsi bantu untuk decode parameter
     function decodeParam(key) {
       return decodeURIComponent(params.get(key) || "N/A");
     }
@@ -135,13 +165,14 @@
     const customerName = decodeParam("customer_name");
     document.getElementById("customer-headline").textContent = "Customer Name : " + customerName;
 
-    // Ambil data orders
-    // contoh "ORD3|Feb 17,2025|Gold|20|Jakarta|Papua|4000000 IDR;ORD4|Feb 17,2025|Silver|30|Jakarta|Bandung|8720000 IDR"
+    // Ambil data orders, misal format:
+    // "ORD3|Feb 17,2025|Gold|20|Jakarta|Papua|4000000;ORD4|Feb 17,2025|Silver|30|Jakarta|Bandung|8720000"
+    // Pastikan total cost hanya angka, karena mata uang dikirim terpisah
     const ordersString = decodeParam("orders");
     const tableBody = document.getElementById("orders-table-body");
 
     let grandTotal = 0;
-    let foundCurrency = ""; // simpan currency pertama yang ditemukan
+    let foundCurrency = decodeParam("currency"); // Dikirim sebagai parameter, misal "IDR"
 
     if (ordersString === "N/A" || ordersString.trim() === "") {
       tableBody.innerHTML = "<tr><td colspan='7'>No orders found</td></tr>";
@@ -150,12 +181,12 @@
       rows.forEach(rowStr => {
         const cols = rowStr.split("|");
         const orderId   = cols[0] || "N/A";
-        let   rawDate   = cols[1] || "N/A";
+        let rawDate     = cols[1] || "N/A";
         const item      = cols[2] || "N/A";
         const quantity  = cols[3] || "N/A";
         const fromLoc   = cols[4] || "N/A";
         const toLoc     = cols[5] || "N/A";
-        const totalCostStr = cols[6] || "N/A"; // e.g. "4000000 IDR"
+        const totalCostStr = cols[6] || "0"; // misal "4000000" (tanpa mata uang)
 
         // Format tanggal
         let formattedDate = rawDate;
@@ -165,21 +196,11 @@
           formattedDate = dateObj.toLocaleDateString('en-US', options);
         }
 
-        // Parsing cost "4000000 IDR" -> 4000000 + "IDR"
-        // 1) Hapus koma (jika ada)
-        const cleaned = totalCostStr.replace(/,/g, "");
-        // 2) Pisahkan angka & currency
-        const parts = cleaned.split(" ");
-        const costValue = parseFloat(parts[0]) || 0; 
-        let currency = "";
-        if (parts.length > 1) {
-          currency = parts.slice(1).join(" "); // "IDR"
-        }
+        // Parse total cost
+        const costValue = parseFloat(totalCostStr) || 0;
+        const costFormatted = formatNumberWithCommas(costValue) + (foundCurrency !== "N/A" ? " " + foundCurrency : "");
 
-        // Format costValue ke "4,000,000 IDR"
-        const costFormatted = formatNumberWithCommas(costValue) + (currency ? ` ${currency}` : "");
-
-        // Tambahkan row ke tabel
+        // Tambahkan baris ke tabel order
         const rowHTML = `
           <tr>
             <td>${orderId}</td>
@@ -193,31 +214,25 @@
         `;
         tableBody.innerHTML += rowHTML;
 
-        // Tambah ke grand total
         grandTotal += costValue;
-        // Simpan currency pertama
-        if (!foundCurrency && currency) {
-          foundCurrency = currency;
-        }
       });
     }
 
-    // Fungsi format angka ke "4,000,000"
+    // Fungsi untuk format angka dengan koma
     function formatNumberWithCommas(num) {
       return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
     }
 
-    // Tampilkan grand total
+    // Tampilkan grand total di tabel quotation
     const grandTotalCell = document.getElementById("grand-total");
     if (grandTotal === 0) {
       grandTotalCell.textContent = "N/A";
     } else {
-      // Format grand total -> "12,720,000 IDR"
-      const formattedGT = formatNumberWithCommas(grandTotal) + (foundCurrency ? ` ${foundCurrency}` : "");
+      const formattedGT = formatNumberWithCommas(grandTotal) + (foundCurrency !== "N/A" ? " " + foundCurrency : "");
       grandTotalCell.textContent = formattedGT;
     }
 
-    // Tombol Print PDF -> window.print()
+    // Tombol Print PDF: panggil window.print()
     document.getElementById("print-pdf-btn").addEventListener("click", () => {
       window.print();
     });
