--- a/order-details.html
+++ b/order-details.html
@@ -134,7 +134,7 @@
   <div id="logo-container">
     <div class="blue-shape"></div>
     <!-- Ganti URL src dengan link logo Brinks di Glide -->
-    <img id="brinks-logo" src="https://example.com/brinks-logo.png" alt="Brinks Logo">
+    <img id="brinks-logo" src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
   </div>
 
   <!-- Headline nama customer -->
