--- a/order-details.html
+++ b/order-details.html
@@ -108,6 +108,9 @@
 
     /* Cetak */
     @media print {
+      .blue-shape {
+        width: 30%;
+      }
       #print-pdf-btn {
         display: none; /* Tombol tidak tercetak */
       }
