--- a/order-details.html
+++ b/order-details.html
@@ -101,6 +101,7 @@
     }
     #quotation-table #grand-total-label {
       background-color: #f4f4f4;
+      font-weight: bold;
     }
     #quotation-table #grand-total {
       font-weight: bold;
