--- a/order-details.html
+++ b/order-details.html
@@ -26,7 +26,7 @@
       left: 0;
       width: 50%; /* Membentang dari kiri hingga setengah halaman */
       height: 100%;
-      background-color: #007BFF;
+      background-color: #000080;
       /* Bentuk setengah trapesium terbalik */
       clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
       z-index: 0;
