--- a/order-details.html
+++ b/order-details.html
@@ -142,6 +142,7 @@
   </div>
 
   <!-- Headline nama customer -->
+  <div> PT. Brinks Solutions Indonesia </div>
   <div id="customer-headline">Customer Name : N/A</div>
 
   <!-- Tombol Print PDF -->
