--- a/order-details.html
+++ b/order-details.html
@@ -41,7 +41,12 @@
       height: 80px; /* Tinggi logo */
       margin: 10px 0 0 20px; /* Penyesuaian margin agar tidak terlalu mepet */
     }
-
+    /* Headline company */
+    #company-headline {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
     /* Headline customer */
     #customer-headline {
       font-size: 24px;
@@ -142,7 +147,7 @@
   </div>
 
   <!-- Headline nama customer -->
-  <div> PT. Brinks Solutions Indonesia </div>
+  <div id="company-headline"> PT. Brinks Solutions Indonesia </div>
   <div id="customer-headline">Customer Name : N/A</div>
 
   <!-- Tombol Print PDF -->
