--- a/order-details.html
+++ b/order-details.html
@@ -134,6 +134,9 @@
       #customer-headline {
         font-size: 16px; /* Perkecil font headline */
       }
+      #company-headline {
+        font-size: 16px; /* Perkecil font headline */
+      }
     }
   </style>
 </head>
