--- a/order-details.html
+++ b/order-details.html
@@ -50,7 +50,7 @@
     /* Headline customer */
     #customer-headline {
       font-size: 24px;
-      font-weight: bold;
+      font-weight: normal;
       margin-bottom: 20px;
     }
 
