--- a/order-details.html
+++ b/order-details.html
@@ -148,9 +148,9 @@
     <!-- Ganti URL src dengan link logo Brinks di Glide -->
     <img id="brinks-logo" src="https://storage.googleapis.com/glide-prod.appspot.com/uploads-v2/9bJYk9GT6IyTBG0O3axw/pub/WUN6P1oA1DyaMrGJa3WT.png" alt="Brinks Logo">
   </div>
-
-  <!-- Headline nama customer -->
+  <!-- Headline nama company -->
   <div id="company-headline"> PT. Brinks Solutions Indonesia </div>
+  <!-- Headline nama customer -->
   <div id="customer-headline">Customer Name : N/A</div>
 
   <!-- Tombol Print PDF -->
