--- a/order-details.html
+++ b/order-details.html
@@ -108,6 +108,7 @@
       width: 100%;
       height: 100px;
       cursor: crosshair;
+      touch-action: none;
     }
     .signature-buttons {
       margin-top: 10px;
@@ -217,13 +218,41 @@
     const ctx = canvas.getContext("2d");
     let drawing = false;
 
-    canvas.addEventListener("mousedown", () => drawing = true);
-    canvas.addEventListener("mouseup", () => drawing = false);
-    canvas.addEventListener("mousemove", e => {
+    function getPosition(event) {
+      const rect = canvas.getBoundingClientRect();
+      if (event.touches) {
+        return { x: event.touches[0].clientX - rect.left, y: event.touches[0].clientY - rect.top };
+      } else {
+        return { x: event.clientX - rect.left, y: event.clientY - rect.top };
+      }
+    }
+
+    function startDrawing(event) {
+      event.preventDefault();
+      drawing = true;
+      const pos = getPosition(event);
+      ctx.beginPath();
+      ctx.moveTo(pos.x, pos.y);
+    }
+
+    function draw(event) {
       if (!drawing) return;
-      ctx.lineTo(e.offsetX, e.offsetY);
+      const pos = getPosition(event);
+      ctx.lineTo(pos.x, pos.y);
       ctx.stroke();
-    });
+    }
+
+    function stopDrawing() {
+      drawing = false;
+    }
+
+    canvas.addEventListener("mousedown", startDrawing);
+    canvas.addEventListener("mousemove", draw);
+    canvas.addEventListener("mouseup", stopDrawing);
+
+    canvas.addEventListener("touchstart", startDrawing);
+    canvas.addEventListener("touchmove", draw);
+    canvas.addEventListener("touchend", stopDrawing);
 
     document.getElementById("clear-signature").addEventListener("click", () => ctx.clearRect(0, 0, canvas.width, canvas.height));
 
