--- a/order-details.html
+++ b/order-details.html
@@ -12,7 +12,7 @@
 
     /* Logo dan Header */
     #logo-container {
-      position: relative;
+      position: auto;
       width: 100%;
       height: 100px;
       margin-bottom: 20px;
@@ -39,9 +39,14 @@
       margin: 10px 0 0 20px;
     }
 
-    #company-headline, #customer-headline {
+    #company-headline,  {
       font-size: 20px;
       font-weight: bold;
+      margin-bottom: 10px;
+    }
+    #customer-headline {
+      font-size: 20px;
+      font-weight: normal;
       margin-bottom: 10px;
     }
 
