--- a/order-details.html
+++ b/order-details.html
@@ -12,7 +12,7 @@
 
     /* Logo dan Header */
     #logo-container {
-      position: auto;
+      position: absolute;
       width: 100%;
       height: 100px;
       margin-bottom: 20px;
