--- a/order-details.html
+++ b/order-details.html
@@ -45,7 +45,7 @@
       margin-bottom: 10px;
     }
     #customer-headline {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: normal;
       margin-bottom: 10px;
     }
@@ -130,6 +130,15 @@
       #print-pdf-btn, .signature-buttons { display: none; }
       thead { display: table-header-group; }
       tfoot { display: table-footer-group; }
+
+      #company-headline {
+        font-weight: bold;
+        font-size: 16;
+      }
+       #customer-headline {
+        font-weight: normal;
+        font-size: 12;
+      }
     }
   </style>
 </head>
