--- a/order-details.html
+++ b/order-details.html
@@ -14,9 +14,8 @@
     #logo-container {
       position: relative;
       width: 100%;
-      height: 100px;
+      height: auto;
       margin-bottom: 20px;
-      transform-origin: top left;
     }
 
     .blue-shape {
@@ -24,7 +23,7 @@
       top: 0;
       left: 0;
       width: 50%;
-      height: 100%;
+      height: 100px;
       background-color: #000080;
       clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
       z-index: 0;
@@ -37,17 +36,20 @@
       z-index: 1;
       height: 80px;
       margin: 10px 0 0 20px;
+      max-width: 100%;
     }
 
     #company-headline,  {
-      font-size: 20px;
+      font-size: 18px;
       font-weight: bold;
       margin-bottom: 10px;
+      text-align: left;
     }
     #customer-headline {
       font-size: 16px;
       font-weight: normal;
       margin-bottom: 10px;
+      text-align: left;
     }
 
     /* Tombol Print */
@@ -63,6 +65,10 @@
     }
 
     /* Tabel */
+    .table-container {
+      overflow-x: auto;
+    }
+    
     table {
       width: 100%;
       border-collapse: collapse;
@@ -70,8 +76,10 @@
     }
     th, td {
       border: 1px solid #000;
-      padding: 10px;
+      padding: 8px;
       text-align: left;
+      word-wrap: break-word;
+      white-space: normal;
     }
     th {
       background-color: #f4f4f4;
@@ -105,15 +113,15 @@
       margin-top: 20px;
       border: 1px solid #000;
       padding: 10px;
-      width: 300px;
+      width: 100%;
       text-align: center;
+      max-width: 350px;
     }
     canvas {
       border: 1px solid #000;
       width: 100%;
       height: 100px;
       cursor: crosshair;
-      touch-action: none;
     }
     .signature-buttons {
       margin-top: 10px;
@@ -124,21 +132,41 @@
       cursor: pointer;
     }
     
+    /* Responsif */
+    @media (max-width: 600px) {
+      #company-headline, #customer-headline {
+        font-size: 16px;
+        text-align: center;
+      }
+
+      .signature-container {
+        width: 100%;
+      }
+
+      th, td {
+        font-size: 12px;
+        padding: 6px;
+      }
+    }
+
     /* Print */
     @media print {
       .blue-shape { width: 100%; }
       #print-pdf-btn, .signature-buttons { display: none; }
       thead { display: table-header-group; }
       tfoot { display: table-footer-group; }
-
       #company-headline {
+        font-size: 16px;
         font-weight: bold;
-        font-size: 16;
-      }
-       #customer-headline {
+        margin-bottom: 10px;
+        text-align: left;
+    }
+      #customer-headline {
+        font-size: 14px;
         font-weight: normal;
-        font-size: 12;
-      }
+        margin-bottom: 10px;
+        text-align: left;
+    }
     }
   </style>
 </head>
@@ -154,20 +182,22 @@
 
   <button id="print-pdf-btn">Print PDF</button>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Order ID</th>
-        <th>Date</th>
-        <th>Item</th>
-        <th>Quantity</th>
-        <th>From</th>
-        <th>To</th>
-        <th>Total Cost</th>
-      </tr>
-    </thead>
-    <tbody id="orders-table-body"></tbody>
-  </table>
+  <div class="table-container">
+    <table>
+      <thead>
+        <tr>
+          <th>Order ID</th>
+          <th>Date</th>
+          <th>Item</th>
+          <th>Quantity</th>
+          <th>From</th>
+          <th>To</th>
+          <th>Total Cost</th>
+        </tr>
+      </thead>
+      <tbody id="orders-table-body"></tbody>
+    </table>
+  </div>
 
   <table id="quotation-table">
     <tr><td id="grand-total-label">Grand Total</td></tr>
@@ -230,49 +260,15 @@
     // Signature Pad
     const canvas = document.getElementById("signature-pad");
     const ctx = canvas.getContext("2d");
+
     let drawing = false;
-
-    function getPosition(event) {
-      const rect = canvas.getBoundingClientRect();
-      if (event.touches) {
-        return { x: event.touches[0].clientX - rect.left, y: event.touches[0].clientY - rect.top };
-      } else {
-        return { x: event.clientX - rect.left, y: event.clientY - rect.top };
-      }
-    }
-
-    function startDrawing(event) {
-      event.preventDefault();
-      drawing = true;
-      const pos = getPosition(event);
-      ctx.beginPath();
-      ctx.moveTo(pos.x, pos.y);
-    }
-
-    function draw(event) {
+    canvas.addEventListener("touchstart", () => drawing = true);
+    canvas.addEventListener("touchend", () => drawing = false);
+    canvas.addEventListener("touchmove", e => {
       if (!drawing) return;
-      const pos = getPosition(event);
-      ctx.lineTo(pos.x, pos.y);
+      const rect = canvas.getBoundingClientRect();
+      ctx.lineTo(e.touches[0].clientX - rect.left, e.touches[0].clientY - rect.top);
       ctx.stroke();
-    }
-
-    function stopDrawing() {
-      drawing = false;
-    }
-
-    canvas.addEventListener("mousedown", startDrawing);
-    canvas.addEventListener("mousemove", draw);
-    canvas.addEventListener("mouseup", stopDrawing);
-
-    canvas.addEventListener("touchstart", startDrawing);
-    canvas.addEventListener("touchmove", draw);
-    canvas.addEventListener("touchend", stopDrawing);
-
-    document.getElementById("clear-signature").addEventListener("click", () => ctx.clearRect(0, 0, canvas.width, canvas.height));
-
-    document.getElementById("save-signature").addEventListener("click", () => {
-      document.getElementById("signature-image").src = canvas.toDataURL();
-      document.getElementById("signature-image").style.display = "block";
     });
   </script>
 
