--- a/order-details.html
+++ b/order-details.html
@@ -114,6 +114,7 @@
       border: 1px solid #000;
       padding: 10px;
       width: 100%;
+      height: 50%;
       text-align: center;
       max-width: 350px;
     }
