--- a/order-details.html
+++ b/order-details.html
@@ -131,6 +131,14 @@
       thead { display: table-header-group; }
       tfoot { display: table-footer-group; }
 
+      #brinks-logo {
+      position: relative;
+      z-index: 1;
+      height: 80px;
+      width: 30%;
+      margin: 10px 0 0 20px;
+    }
+
       #company-headline {
         font-size: 18px;
         font-weight: bold;
