--- a/order-details.html
+++ b/order-details.html
@@ -135,7 +135,8 @@
       position: relative;
       z-index: 1;
       height: 80px;
-      width: 50%;
+      margin: 8px 0 0 16px;
+        
     }
 
       #company-headline {
