--- a/order-details.html
+++ b/order-details.html
@@ -135,7 +135,8 @@
       position: relative;
       z-index: 1;
       height: 80px;
-      margin: 5px 0 0 10px;
+      width: 40%;
+      margin: 10px 0 0 20px;
         
     }
 
