--- a/order-details.html
+++ b/order-details.html
@@ -135,7 +135,7 @@
       position: relative;
       z-index: 1;
       height: 60px;
-      width: 30%;
+      width: 40px;
       margin: 10px 0 0 20px;
         
     }
