--- a/order-details.html
+++ b/order-details.html
@@ -126,7 +126,7 @@
     
     /* Print */
     @media print {
-      .blue-shape { width: 50%; }
+      .blue-shape { width: 50%; height: 60px; }
       #print-pdf-btn, .signature-buttons { display: none; }
       thead { display: table-header-group; }
       tfoot { display: table-footer-group; }
@@ -135,7 +135,7 @@
       position: relative;
       z-index: 1;
       height: 60px;
-      width: 40px;
+      width: 40%;
       margin: 10px 0 0 20px;
         
     }
