--- a/order-details.html
+++ b/order-details.html
@@ -24,7 +24,7 @@
       top: 0;
       left: 0;
       width: 50%;
-      height: 100%;
+      height: 80px;
       background-color: #000080;
       clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
       z-index: 0;
@@ -35,7 +35,8 @@
     #brinks-logo {
       position: relative;
       z-index: 1;
-      height: 80px;
+      height: 60px;
+      width: 40%
       margin: 10px 0 0 20px;
     }
 
@@ -126,7 +127,7 @@
     
     /* Print */
     @media print {
-      .blue-shape { width: 50%; height: 70px; }
+      .blue-shape { width: 50%; height: 80px; }
       #print-pdf-btn, .signature-buttons { display: none; }
       thead { display: table-header-group; }
       tfoot { display: table-footer-group; }
