--- a/order-details.html
+++ b/order-details.html
@@ -15,7 +15,8 @@
       position: relative;
       width: 100%;
       height: 100px;
-      margin-bottom: 10px;
+      margin-bottom: 50px;
+      margin-top: 50px;
       transform-origin: top left;
     }
 
@@ -24,7 +25,7 @@
       top: 0;
       left: 0;
       width: 50%;
-      height: 60px;
+      height: 30px;
       background-color: #000080;
       clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
       z-index: 0;
