--- a/order-details.html
+++ b/order-details.html
@@ -15,7 +15,7 @@
       position: relative;
       width: 100%;
       height: 100px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       margin-top: 50px;
       transform-origin: top left;
     }
@@ -38,8 +38,8 @@
       z-index: 1;
       height: 20px;
       width: 10%
-      margin-bottom: 20%;
-      margin-top: 20%;
+      margin-bottom: 20px;
+      margin-top: 20px;
     }
 
     #company-headline, {
