--- a/order-details.html
+++ b/order-details.html
@@ -139,7 +139,8 @@
       z-index: 1;
       height: 50px;
       width: 40%;
-      margin: 10px 0 0 20px;
+      margin-bottom: 90px;
+      margin-top: 5px;
         
     }
 
